--- a/src/web/templates/layout.html
+++ b/src/web/templates/layout.html
@@ -35,7 +35,7 @@
             <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav me-auto">
                     <a class="nav-item nav-link" href="/">web</a>
-                    <a class="nav-item nav-link" href="/api">api</a>
+                    <a class="nav-item nav-link" href="/api/docs">api</a>
                 </div>
 
                 <div class="navbar-nav">
