--- a/src/web/templates/task.html
+++ b/src/web/templates/task.html
@@ -66,7 +66,7 @@
             </fieldset>
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
-                <button class="btn btn-outline-info" onclick="goBack()">Go Back</button>
+                <input type="button" class="btn btn-outline-info" onclick="goBack()" value="Back to list"/>
             </div>
         </form>
     </div>
