--- a/src/web/templates/layout.html
+++ b/src/web/templates/layout.html
@@ -34,8 +34,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav me-auto">
-                    <a class="nav-item nav-link" href="/">web</a>
-                    <a class="nav-item nav-link" href="/api/docs">api</a>
+                    <a class="nav-item nav-link" href="/api/docs" target="_blank">api</a>
                 </div>
 
                 <div class="navbar-nav">
