--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -10,6 +10,7 @@
             <th scope="col">User email</th>
             <th scope="col">Task</th>
             <th scope="col">Finished</th>
+            <th scope="col">Status</th>
             <th colspan="2"><input type="button" onclick="location.href='add';" value="Create new task"/></th>
         </tr>
         </thead>
@@ -23,6 +24,7 @@
             {% if task.is_completed %}
             <td align="center">✔</td> {% else %} <td></td>
             {% endif %}
+            <td>{{ task.status }}</td>
             <td><img class="ico-edit-rec" onClick="location.href='edit/{{ task.id }}';" /></td>
             <td><img class="ico-drop-rec" onClick="location.href='drop/{{ task.id }}';" /></td>
         </tr>
